--- a/client/main.html
+++ b/client/main.html
@@ -3,12 +3,5 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor! It rocks babe!</h1>
-
-  {{> hello}}
+    <div id="render-target"></div>
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
